--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "iii"]
 	path = iii
 	url = https://github.com/daliaWdswrth/iii.git
+[submodule "locality"]
+	path = locality
+	url = https://github.com/daliaWdswrth/locality.git
