--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "arith"]
 	path = arith
 	url = https://github.com/daliaWdswrth/arith.git
+[submodule "um"]
+	path = um
+	url = https://github.com/daliaWdswrth/um.git
