--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "um"]
 	path = um
 	url = https://github.com/daliaWdswrth/um.git
+[submodule "asmcoding"]
+	path = asmcoding
+	url = https://github.com/daliaWdswrth/asmcoding.git
